# realtime-industrial-sensor-embedded-cpp

./: .gitignore  CMakeLists.txt  README.md  all_stack.txt  build_and_lint.bat  cmake-build-notes.md  suppressions.lnt  yeniprgram2.uvguix.Arge1  yeniprgram2.uvguix.Arge1.bak  yeniprgram2.uvoptx  yeniprgram2.uvprojx
.github/workflows/: firmware-ci.yml
App/Inc/: Application.hpp  ConfigManager.hpp
App/Src/: Application.cpp  ConfigManager.cpp  main.cpp
Common/Inc/: MedianFilter.hpp
Config/Inc/: Config_Manager.h  appcons.h  apptdef.h  sensortypes.h
Config/Src/: config_manager.c  structs.cpp
Drivers/CMSIS/Include/: cmsis_armclang.h
Drivers/Inc/: DelayTimer.hpp  I2cBus.hpp  LcdDisplay.hpp  PwmOutput.hpp  Sht3xSensor.hpp  SystemClock.hpp  Testability.hpp  UartDriver.hpp  UartRingBuffer.hpp
Drivers/Src/: DelayTimer.cpp  I2cBus.cpp  LcdDisplay.cpp  PwmOutput.cpp  Sht3xSensor.cpp  SystemClockFacade.cpp  UartRingBuffer.cpp
Legacy/Inc/: adc.h  delay.h  error_check.h  filter.h  i2c.h  lcd.h  modbus_rtu.h  pwm.h  sensor_task.h  sht3x.h  sysclock.h  uart.h  watchdog.h
Legacy/Src/: filter.cpp  flash_write.cpp  i2c.cpp  interrupts.cpp  sysclock.cpp  uart.cpp
Project/: stm32f410.sct
RTE/_Target_1/: RTE_Components.h
Services/Inc/: AdcService.hpp  ErrorManager.hpp  FlashStorage.hpp  ModbusService.hpp  SensorService.hpp  WatchdogService.hpp
Services/Src/: AdcService.cpp  ErrorManager.cpp  ModbusService.cpp  SensorService.cpp  WatchdogService.cpp
Tests/: CMakeLists.txt  HostDisplayPwmStub.cpp  HostI2cBusBaseStub.cpp  HostUartDriverStub.cpp  test_config_edge_cases.cpp  test_config_manager.cpp  test_error_manager.cpp  test_error_manager_extended.cpp  test_median_filter.cpp  test_modbus_edge_cases.cpp  test_modbus_queue_boundaries.cpp  test_modbus_service.cpp  test_sensor_error_integration.cpp  test_sensor_service_timing.cpp  test_sht3x_conversion.cpp  test_sht3x_crc_failure.cpp  test_sht3x_i2c_failure.cpp  test_uart_frame_ready.cpp  test_uart_ring_buffer.cpp
cmake/: armclang-keil.cmake
docs/: test_cases.md  test_refactor_notes.md
